Update php-spx demo

--- a/php-spx/demo/index.html
+++ b/php-spx/demo/index.html
@@ -230,7 +230,7 @@
                     makeDataTable(
                         'reports',
                         {
-                            makeRowUrl: row => 'report.html?key=' + row.key,
+                            makeRowUrl: row => 'report.html&key=' + row.key,
                             columns: [
                                 {
                                     label: 'Date',
