--- a/php-spx/demo/report.html
+++ b/php-spx/demo/report.html
@@ -73,18 +73,18 @@
 
             const initDialog = {
                 container: $('#init-report'),
-                title: $('#init-report p:nth-of-type(1)'),
-                progressInfo: $('#init-report p:nth-of-type(2)'),
-                progress: $('#init-report .progress'),
-                progressBar: $('#init-report .progress > div'),
+                title: document.querySelector('#init-report p:nth-of-type(1)'),
+                progressInfo: document.querySelector('#init-report p:nth-of-type(2)'),
+                progress: document.querySelector('#init-report .progress'),
+                progressBar: document.querySelector('#init-report .progress > div'),
                 data: {}
             };
 
             function setProgress(title, current, total) {
-                initDialog.title.text(title);
+                initDialog.title.innerHTML = title;
 
                 if (!total) {
-                    initDialog.progress.hide();
+                    initDialog.progress.style.display = 'none';
 
                     return;
                 }
@@ -96,24 +96,20 @@
                     };
                 }
 
-                initDialog.progress.show();
-                initDialog.progressBar.width(
+                initDialog.progress.style.display = 'block';
+                initDialog.progressBar.style.width = (
                     Math.round(100 * current / total) + '%'
                 );
 
                 const currentTime = new Date().getTime() / 1000;
 
+                const rate = (current - initDialog.data[title].startCount) / (currentTime - initDialog.data[title].startTime);
                 const remainingTime = Math.round(
-                    (total - current)
-                    * (
-                        (currentTime - initDialog.data[title].startTime)
-                        / (current - initDialog.data[title].startCount)
-                    )
+                    (total - current) / rate
                 );
 
-                initDialog.progressInfo.text(
-                    fmt.pct(current / total) + ' (' + fmt.quantity(current) + ')'
-                    + ' ETA: ' + remainingTime + 's'
+                initDialog.progressInfo.innerText = (
+                    `${fmt.pct(current / total)} (${fmt.quantity(current)}, ${fmt.quantity(rate)}/s) ETA: ${remainingTime}s`
                 );
             }
 
@@ -188,7 +184,9 @@
                         }
 
                         setProgress(
-                            'Building call list... (1/2)',
+                            'Building call list... (1/2)<br>'
+                            + `${fmt.quantity(profileDataBuilder.getTotalCallCount())} function calls`
+                            ,
                             profileDataBuilder.getCurrentCallCount(),
                             profileDataBuilder.getTotalCallCount()
                         );
@@ -232,13 +230,13 @@
                 })
                 .then(() => profileDataBuilder.buildCallRangeTree(
                     (current, total) => setProgress(
-                        'Building call range tree... (2/2)',
+                        `Building call range tree... (2/2)<br>${fmt.quantity(total)} function calls`,
                         current,
                         total
                     )
                 ))
                 .then(() => {
-                    initDialog.title.text('Initializing widgets...');
+                    initDialog.title.innerText = 'Initializing widgets...';
 
                     return new Promise(resolve => resolve(profileDataBuilder.getProfileData()));
                 })
@@ -281,7 +279,10 @@
                     return new Promise(resolve => resolve());
                 })
                 .then(() => initDialog.container.fadeOut(500))
-                .catch(e => initDialog.progressInfo.text(e))
+                .catch(e => {
+                    initDialog.progressInfo.innerText = e;
+                    console.error(e)
+                })
                 ;
         });
     </script>
